--- a/bubble/demo/04ginTemplate/templates/fileUpload.html
+++ b/bubble/demo/04ginTemplate/templates/fileUpload.html
@@ -5,9 +5,14 @@
     <title>fileUpload</title>
 </head>
 <body>
-<form action="upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="file1">
-    <input type="submit" value="上传文件">
+<form action="/upload" method="post" enctype="multipart/form-data">
+    <div>
+        <input type="file" name="file1">
+    </div>
+    <br>
+    <div>
+        <input type="submit" value="上传文件">
+    </div>
 
 </form>
 </body>
