--- a/bubble/demo/04ginTemplate/templates/login.html
+++ b/bubble/demo/04ginTemplate/templates/login.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>login</title>
 </head>
 <body>
-$END$
+<form action="/login" method="post">
+    <div>
+        <label for="username">username</label>
+        <input type="text" name="username" id="username">
+    </div>
+    <div>
+        <label for="password">password</label>
+        <input type="password" name="password" , id="password">
+    </div>
+    <div>
+        <input type="submit" value="登录">
+
+    </div>
+</form>
 </body>
 </html>
